# 1ai-skills

./: .agentrc  .env  .env.example  .env.viral  .gitignore  .gitleaks.toml  .gitmodules  .global_agent_config.json  .skill-activation.json  .vector_db_sync_state.json  12_posts_schedule.json  1ai-autodroid  1ai-playstore-agent  1ai-skills  AGENTS.md  AUDIT_FIX_PLAN.md  AUTOMATION_READY.md  AUTOMATION_SCHEDULED.md  AUTOMATION_STACK.md  AUTO_INDEX.py  CHANGELOG.md  CLAWHUB_TOKEN.json  CODEBASE.md  CONTENT_VALIDATION_GUIDE.md  CONTENT_VIDEO_SAMPLE.md  CONTRIBUTING.md  CRON_AUTO_SETUP_COMPLETE.md  CRON_SCHEDULE.md  CTRADER_API_REGISTER_GUIDE.md  DEPENDENCIES.md  DIRECTIVE.md  EMAIL_VIA_GOG.md  EMERGENCY_PROTOCOL_IDR_0.md  EXECUTION_PLAN.md  EXECUTION_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_COMPREHENSIVE_STATUS.md  FINAL_EXECUTION_STATUS.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_STATUS.md  (+343 more)
automation/automation/1ai-autodroid/phone-farm/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  adb_pool.py  auth.py  auth_user.py  billing.py  db.py  device_manager.py  docker-compose.yml  ecosystem.config.js  farm_cli.py  farm_daemon.py  farm_daemon.py.bak  phonefarm_logging.py  pyproject.toml  rate_limiter.py  screen_stream.py  task_runner.py  tenant.py  usage_tracker.py
automation/automation/1ai-autodroid/phone-farm/.sisyphus/: boulder.json
automation/automation/1ai-autodroid/phone-farm/dashboard/: index.html
automation/automation/1ai-autodroid/phone-farm/src/: __init__.py  config.py  main.py
automation/automation/1ai-autodroid/phone-farm/static/: index.html
(+5103 files in other folders)
